--- a/pom.xml
+++ b/pom.xml
@@ -5,74 +5,138 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.example</groupId>
-    <artifactId>MovitaAutomation</artifactId>
+    <artifactId>B2CucumberFramework</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <name>Guidersoft B2 Cucumber Framework</name>
 
+    <!-- projeye ait properties burada olur
+        dependency'lerde kullanilacak degiskenler burada belirlenebilir
+        <selenium.version>4.8.0</selenium.version> ile
+        dependency'de ${selenium.version} degiskeni ile 4.8.0 degeri alinir
+    -->
     <properties>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <selenium.version>4.8.0</selenium.version>
+        <webdrivermanager.version>5.3.2</webdrivermanager.version>
+        <testng.version>7.7.1</testng.version>
+        <cucumber.version>7.11.2</cucumber.version>
     </properties>
+
     <dependencies>
+
+        <!-- selenium dependency,
+            ${selenium.version} yukarida properties kisminda belirtilen  <selenium.version> degiskenidir
+         -->
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-java</artifactId>
-            <version>4.8.1</version>
+            <version>${selenium.version}</version>
         </dependency>
-        <dependency>
-            <groupId>org.testng</groupId>
-            <artifactId>testng</artifactId>
-            <version>7.7.1</version>
-        </dependency>
+
+        <!-- webdriver setup etmek icin webdriver manager kullanilmaktadir -->
         <dependency>
             <groupId>io.github.bonigarcia</groupId>
             <artifactId>webdrivermanager</artifactId>
-            <version>5.3.2</version>
+            <version>${webdrivermanager.version}</version>
         </dependency>
+
+        <!-- projede TestNG kullanilacaktir -->
         <dependency>
-            <groupId>io.cucumber</groupId>
-            <artifactId>cucumber-testng</artifactId>
-            <version>7.11.2</version>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>${testng.version}</version>
         </dependency>
+
+        <!-- cucumber-java anlasmasi icin dependency -->
         <dependency>
             <groupId>io.cucumber</groupId>
             <artifactId>cucumber-java</artifactId>
-            <version>7.11.2</version>
+            <version>${cucumber.version}</version>
         </dependency>
+
+        <!-- cucumber-testng'nin anlasmasi icin dependency -->
+        <dependency>
+            <groupId>io.cucumber</groupId>
+            <artifactId>cucumber-testng</artifactId>
+            <version>${cucumber.version}</version>
+        </dependency>
+
+        <!-- annotationslarlar getter, setter gibi standart islemleri yapabilmek icin lombok kullanilir -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.26</version>
+        </dependency>
+
+        <!-- extent report icin adaptör -->
+        <!-- Runner'da plugin'e
+             "com.aventstack.extentreports.cucumber.adapter.ExtentCucumberAdapter:"
+             eklenir
+             ayrica, test/resources altinda extent.properties olmalidir
+         -->
+        <dependency>
+            <groupId>tech.grasshopper</groupId>
+            <artifactId>extentreports-cucumber7-adapter</artifactId>
+            <version>1.10.1</version>
+        </dependency>
+
+        <!-- for YAML -->
         <dependency>
             <groupId>com.fasterxml.jackson.dataformat</groupId>
             <artifactId>jackson-dataformat-yaml</artifactId>
             <version>2.10.3</version>
         </dependency>
 
-
+        <!-- for YAML -->
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
             <version>2.10.3</version>
         </dependency>
+
+
+        <!-- for json -->
         <dependency>
             <groupId>com.googlecode.json-simple</groupId>
             <artifactId>json-simple</artifactId>
             <version>1.1.1</version>
         </dependency>
+
+
+        <!-- apache poi for xls -->
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>4.1.0</version>
+        </dependency>
+
+        <!-- apache poi for xlsx -->
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>4.1.0</version>
+        </dependency>
     </dependencies>
 
     <build>
         <plugins>
+            <!-- diger uygulamalarin testleri baslatma noktasi -->
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.22.2</version>
+                <version>3.0.0-M1</version>
                 <configuration>
                     <includes>
-
-                        <include>**/Runner*.java</include>
+                        <include>**/RunnerLogin.java</include>
                     </includes>
+                    <testFailureIgnore>true</testFailureIgnore>
                 </configuration>
             </plugin>
         </plugins>
     </build>
 
-           </project>
+</project>
