--- a/pom.xml
+++ b/pom.xml
@@ -78,5 +78,19 @@
             <version>1.1.1</version>
         </dependency>
 
+        <!-- apache poi for xls -->
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>4.1.0</version>
+        </dependency>
+
+        <!-- apache poi for xlsx -->
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>4.1.0</version>
+        </dependency>
+
     </dependencies>
 </project>
