--- a/pom.xml
+++ b/pom.xml
@@ -93,4 +93,20 @@
         </dependency>
 
     </dependencies>
+    <build>
+        <plugins>
+            <!-- diger uygulamalarin testleri baslatma noktasi -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.22.2</version>
+                <configuration>
+                    <includes>
+                        <!--  projede herhangi bir packagede, Runner ile baslayan java dosyalari -->
+                        <include>/RunnerMumin.java</include>
+                    </includes>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
