--- a/pom.xml
+++ b/pom.xml
@@ -101,12 +101,11 @@
                 <version>3.0.0-M1</version>
                 <configuration>
                     <includes>
-                        <include>*/Runner*.java</include>
+                        <include>**/Runner*.java</include>
                     </includes>
                     <testFailureIgnore>true</testFailureIgnore>
                 </configuration>
             </plugin>
-
         </plugins>
     </build>
 </project>
